[package]
name = "pixel_unsort"
version = "0.1.0"
authors = ["Jeffrey Rosenbluth <jeffrey.rosenbluth@gmail.com>"]
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
description = "The Pixel Unsort algorithm."

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
image = "0.24.6"
num-traits = "0.2.15"
rfd = "0.12.0"
directories = "5.0.1"
rayon = "1.7.0"
env_logger = "0.10"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

[package.metadata.bundle]
name = "Pixel Unsort"
identifier = "com.applausecode.pixelunsort"
icon = ["icon_ios_touch_192.png", "icon-256.png", "icon-1024.png", "maskable_icon_x512.png", "native_icon.png"]
version = "0.1.0"
resources = ["assets"]
copyright = "Copyright (c) Jeffrey Rosnebluth 2023. All rights reserved."
category = "Graphics and Design"
short_description = "The Pixel Unsort algorithm."
osx_url_schemes = ["com.applausecode.pixelunsort"]